Refactoring stage 12